--- a/egg01.html
+++ b/egg01.html
@@ -24,5 +24,19 @@
             </ul>
         </div>
     </h1></div>
+    <h1>Hi!</h1>
+    <h4>您找到了一个一个彩蛋！真不错啊（赞赏</h4>
+    <h4>那么，你要玩弄这个彩蛋吗？（怪怪的呢</h4>
+    <div>
+    <button><a href="https://www.bilibili.com/video/BV1GJ411x7h7?vd_source=29be7938549db7356ac64ceffa9fd06b">当然！</a><button>
+    <button><a href="main.html">我没那癖好</a></button>
+    </div>
+    <br>
+    <br>
+    <footer>
+        © Copyright Nobody,1145-1919.All right served.
+        <br>
+        学下北泽，就从一个一个先辈开始！(喜
+    </footer>
 </body>
 </html>
