--- a/help.html
+++ b/help.html
@@ -21,5 +21,15 @@
                 <li><a href="egg01.html">彩蛋大厅</a></li>
             </ul>
         </div></h1></div>
-</body>
+        <div class="glass">
+        <section style="background-color:rgba(0, 255, 255, 0.527)">1.没有出现声音？<br>Ans:你可以打开浏览器的限制自动播放试试看呢</section>
+        <section style="background-color:rgba(16, 192, 192, 0.527)">2.没有进入彩蛋？<br>Ans:彩蛋本来就不存在的好嘛（绝对不是这个大懒货忘记写了）</section>
+        <section style="background-color:rgba(127, 255, 212, 0.541)">3.没有进入手机版？<br>Ans:其实手机版跟电脑版差不多，某个姓曾的放了我鸽子没帮我写(;´༎ຶД༎ຶ`) 不过你还是能看看大概的：<sbr><a href="aknowlege.html">大雷音寺（什</section>
+        </div>
+        <footer style="background-color: slategrey;">© Copyright Nobody,1145-1919.All right served.
+            <br>
+            学下北泽，就从一个一个先辈开始！(喜
+        <br>
+            冷知识：我其实还挺闲的，有人能来找我玩吗？</footer>
+    </body>
 </html>
