--- a/phonemain.html
+++ b/phonemain.html
@@ -11,24 +11,21 @@
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <!-- <script src="//cdn.jsdelivr.net/npm/@triggerjs/trigger" defer></script>-->
         <script src="js/common.js"></script>
-        <script type="text/javascript">
-            alert("请注意！"+"\n"+"自动跳转手机版网页有时候不可能百分百有用，如果真的扑街了，请手动跳转至awqjerry1594.github.io/Arsene/phonemain.html哦！");
-            ScreenWidth();
-            </script>
+        
 </head>
 <body>
     <main>
     <div class="container">
-        <h1><img style="width:80px;height:80px;float:left" src="pic/heart.jpg" title="我这写法，排版，梦回html1.0有木有?"> 一个小网页 Date: 2022年8月4日 <div class="topclick">
+        <h4 style="z-index:999;height: 80px;text-align: center;position: sticky; background-color: rgba(1, 183, 255, 0.473);top: 0;"><img style="width:80px;height:80px;float:left" src="pic/heart.jpg" title="我这写法，排版，梦回html1.0有木有?"> 一个小网页 Date: 2022年8月4日 <div class="topclick">
             <div class="ltbox1">
                 <p>主页面</p>
             </div>
-                <ul class="ltbox2">
+                <ul class="ltbox2" style="height:auto;width:auto">
                     <li class="li1"><a href="main.html">主页面</a></li>
                     <li><a href="help.html">帮助文档</a></li>
                     <li><a href="egg01.html">彩蛋大厅</a></li>
                 </ul>
-            </div></h1>
+            </div></h4>
         <div class="deepdarkf">这是一个很可爱的彩蛋(￣▽￣)~~<button style="background-color:paleturquoise" onclick="Jump_To_Egg()">奖励</button></div>
         <div class="glass"><section style="background-color:rgba(240,255,255,0.5)" class="glass">hi <br> <img src="pic/run.gif"></section>
         <section style="background-color:rgba(245,245,220,0.5)">说在之前，我在做网页的时候，发现了自动播放可能会失效。<br> 请参考这篇文档：<a href="help.html"><button>解决办法</button></a> <br> 网页做的挺累的，如果可以的话，请对我说一声七夕快乐！ <br> 网页问题可以参考我写的文档，帮助不大，也许会很有用呢！<button onclick="jump_to_help()">点击以跳转</button></section>
@@ -38,12 +35,12 @@
         <section style="background-color: rgba(0, 191, 255,0.5)"class="glass">七夕节！蛮多的情侣不约而同齐聚鹊桥下，为节日的美好献上真情实意的证明。 ( ´･･)ﾉ(._.`) <br> 有关于七夕节，七夕，七。。。(化身怨灵)</section>
         <section style="background-color: rgba(0,155,230,0.5)" class="glass">等下，我不能...  <br> 唔，要不你等一下，闭上眼，再往下滑一层。这很快就好。。。 <br>ヾ(≧へ≦)〃</section>  
         <section> <br></section>
-        <section style="background-color:rgba(255, 0, 0,0.5)" class="glass">嘿！这里是来自喜鹊的一句话：能不能帮忙按个按钮？这个懒狗没做自动跳转！ <br> <button><a href="true.html">按一下！</a></section>
+        <section style="background-color:rgba(255, 0, 0,0.5)" class="glass">嘿！这里是来自喜鹊的一句话：能不能帮忙按个按钮？这个懒狗没做自动跳转！ <br> <button><a href="true.html">点我！</a></section>
     </div>
         <footer style="background-color: slategrey;">© Copyright Nobody,1145-1919.All right served.
             <br>
             学下北泽，就从一个一个先辈开始！(喜
-        <br>
+            <br>
             冷知识：我其实还挺闲的，有人能来找我玩吗？</footer>
     </main>
 </body>
