--- a/true.html
+++ b/true.html
@@ -8,10 +8,10 @@
     <title>七夕节快乐哦！记得和你的另一半一起，逛一逛！( •̀ ω •́ )y</title>
     <script src="js/common.js"></script>
     <script src="js/sakura.js"></script>
-    <script src="//unpkg.com/@triggerjs/trigger" defer></script> -->
-    <script src="//cdn.jsdelivr.net/npm/@triggerjs/trigger" defer></script> -->
+    <script src="//unpkg.com/@triggerjs/trigger" defer></script>
+    <script src="//cdn.jsdelivr.net/npm/@triggerjs/trigger" defer></script>
     <audio src="music/fakfire.m4a" preload="auto" autoplay="autoplay"></audio>
-    <link rel="stylesheet" type="text/css" href="css/common.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/common.css">
     <style>
         :root {
             font-size:15px;
