--- a/help.html
+++ b/help.html
@@ -25,7 +25,9 @@
         <section style="background-color:rgba(0, 255, 255, 0.527)">1.没有出现声音？<br>Ans:你可以打开浏览器的限制自动播放试试看呢</section>
         <section style="background-color:rgba(16, 192, 192, 0.527)">2.没有进入彩蛋？<br>Ans:彩蛋本来就不存在的好嘛（绝对不是这个大懒货忘记写了）</section>
         <section style="background-color:rgba(127, 255, 212, 0.541)">3.没有进入手机版？<br>Ans:其实手机版跟电脑版差不多，某个姓曾的放了我鸽子没帮我写(;´༎ຶД༎ຶ`) 不过你还是能看看大概的：<sbr><a href="aknowlege.html">大雷音寺（什</section>
-        </div>
+        <section style="background-color:rgba(16, 192, 192, 0.527)">4.文字会莫名消失？<br>Ans:由于引用了CodingStartUp的库，同时，这个库似乎抽风了，没有翻墙的话无法显示，所以我给他删了</section>
+        
+            </div>
         <footer style="background-color: slategrey;">© Copyright Nobody,1145-1919.All right served.
             <br>
             学下北泽，就从一个一个先辈开始！(喜
