--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <!-- <script src="//cdn.jsdelivr.net/npm/@triggerjs/trigger" defer></script>-->
         <script src="js/common.js"></script>
         <script type="text/javascript">
-            alert("请注意！"+"\n"+"自动跳转手机版网页有时候不可能百分百有用，如果真的扑街了，请手动跳转至awqjerry1594.github.io/Arsene/phonemain.html哦！");
+            alert("请注意！"+"\n"+"自动跳转手机版网页有时候不可能百分百有用，如果真的扑街了，请手动跳转至awqj1594.github.io/Arsene/phonemain.html哦！");
             ScreenWidth();
             </script>
 </head>
